--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <link rel = "stylesheet" href = "CSS/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
+
 <body>
-  
+  <div>
+      <nav>
+          <ul>
+            <li><img src = "img/logo.PNG" class = "logo"></li>
+            <li><a href = "index.html">Hem</a></li>
+            <li><a href = "sida2.html">Meny</a></li>
+            <li><a href = "sida3.html">Om oss</a></li>
+    
+          </ul>
+        </nav>
+        <main>
+        </main>
+        <article>
+          Världens första café som säljer varm glass. Glass av valfri smak som kokas upp till 100 grader och serveras med grädde och riven choklad.
+        </article>
+  </div>
+  <img src = "img/choklad.jpg" class = "img1"> 
 </body>
 </html>
