--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-  <div>
       <nav>
           <ul>
             <li><img src = "img/logo.PNG" class = "logo"></li>
@@ -22,9 +21,10 @@
         <main>
         </main>
         <article>
-          Världens första café som säljer varm glass. Glass av valfri smak som kokas upp till 100 grader och serveras med grädde och riven choklad.
+          Världens första café som säljer varm glass. Glass av valfri smak som kokas upp till 100 grader och serveras med grädde och valfri topping.
+          <br><br><br>
+          Dagens special är våran "ice-hot chocolate marshmallow drink"!
         </article>
-  </div>
-  <img src = "img/choklad.jpg" class = "img1"> 
+  <img src = "img/glass2.PNG" class = "img1"> 
 </body>
 </html>
