--- a/sida3.html
+++ b/sida3.html
@@ -10,12 +10,14 @@
 
 <body>
 
-    <nav>
+    <nav id = "sida3_container">
+      <nav id = "sida3_nav">
       <ul>
-            <li><img src = "img/logo.PNG" class = "logo"></li>
-            <li><a href = "index.html">Hem</a></li>
-            <li><a href = "sida2.html">Meny</a></li>
-            <li><a href = "sida3.html">Om oss</a></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><a href = "index.html">Hem</a></li>
+            <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
+            <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
       </ul>
     </nav>
+  </nav>
 </body>
