--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
 </head>
 
 <body>
-      <nav>
+  <div id = "index_container">
+      <nav id = "index_nav">
           <ul>
-            <li><img src = "img/logo.PNG" class = "logo"></li>
-            <li><a href = "index.html">Hem</a></li>
-            <li><a href = "sida2.html">Meny</a></li>
-            <li><a href = "sida3.html">Om oss</a></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><a href = "index.html">Hem</a></li>
+            <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
+            <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
     
           </ul>
         </nav>
-        <main>
+        <main id = "index_main">
         </main>
-        <article>
+        <article id = "index_article">
           Världens första café som säljer varm glass. Glass av valfri smak som kokas upp till 100 grader och serveras med grädde och valfri topping.
           <br><br><br>
           Dagens special är våran "ice-hot chocolate marshmallow drink"!
         </article>
   <img src = "img/glass2.PNG" class = "img1"> 
+</div>
 </body>
 </html>
