--- a/sida2.html
+++ b/sida2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,16 +10,29 @@
 </head>
 
 <body>
-
-    <nav>
+  <div id = "sida2_container">
+    <nav id = "sida2_nav">
       <ul>
-            <li><img src = "img/logo.PNG" class = "logo"></li>
-            <li><a href = "index.html">Hem</a></li>
-            <li><a href = "sida2.html">Meny</a></li>
-            <li><a href = "sida3.html">Om oss</a></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><a href = "index.html">Hem</a></li>
+            <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
+            <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
 
       </ul>
     </nav>
-
-    <h1>Ice-hot chocolate marshmallow drink!</h1>
+    <ul>
+      <li class = "li_sida2">
+        <img src = "img/chocolate_marshmallow.jpg" class = "img2">
+        Ice-hot chocolate marshmallow 
+      </li>
+      <li class = "li_sida2">
+        <img src = "img/White-icecream.jpg" class = "img2">
+        Ice-hot white chocolate
+      </li>
+      <li class = "li_sida2">
+        <img src = "img/gingerbread-icecream.jpg" class = "img2">
+          Ice-hot white chocolate gingerbread
+      </li>
+    </ul>
+  </div>
 </body>
