--- a/sida2.html
+++ b/sida2.html
@@ -13,26 +13,20 @@
   <div id = "sida2_container">
     <nav id = "sida2_nav">
       <ul>
-            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo" alt = "Picture of logo"></li>
             <li class = "li_nav"><a href = "index.html">Hem</a></li>
             <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
             <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
 
       </ul>
     </nav>
-    <ul>
-      <li class = "li_sida2">
-        <img src = "img/chocolate_marshmallow.jpg" class = "img2">
-        Ice-hot chocolate marshmallow 
-      </li>
-      <li class = "li_sida2">
-        <img src = "img/White-icecream.jpg" class = "img2">
-        Ice-hot white chocolate
-      </li>
-      <li class = "li_sida2">
-        <img src = "img/gingerbread-icecream.jpg" class = "img2">
-          Ice-hot white chocolate gingerbread
-      </li>
-    </ul>
+    <div class = "menu_container">
+      <h1>Meny</h1>
+      <p>Ice-hot chocolate marshmallow drink..............................37kr</p>
+      <p>Ice-hot white chocolate drink..............................................39kr</p>
+      <p>Ice-hot caramel chocolate drink.........................................35kr</p>
+      <p>Ice-hot white chocolate candycane drink.......................43kr</p>
+      <p>Ice-hot rainbow cottoncandy drink...................................47kr</p>
+  </div>
   </div>
 </body>
