--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id = "index_container">
       <nav id = "index_nav">
           <ul>
-            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo" alt = "Picture of logo"></li>
             <li class = "li_nav"><a href = "index.html">Hem</a></li>
             <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
             <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
@@ -26,7 +26,7 @@
           <br><br><br>
           Dagens special är våran "ice-hot chocolate marshmallow drink"!
         </article>
-  <img src = "img/glass2.PNG" class = "img1"> 
+  <img src = "img/glass2.PNG" class = "img1" alt = "Picture of Ice-hot chocolate marsmallow drink"> 
 </div>
 </body>
 </html>
