--- a/sida3.html
+++ b/sida3.html
@@ -10,14 +10,19 @@
 
 <body>
 
-    <nav id = "sida3_container">
+    <div id = "sida3_container">
       <nav id = "sida3_nav">
       <ul>
-            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo"></li>
+            <li class = "li_nav"><img src = "img/logo.PNG" class = "logo" alt = "Picture of logo"></li>
             <li class = "li_nav"><a href = "index.html">Hem</a></li>
             <li class = "li_nav"><a href = "sida2.html">Meny</a></li>
             <li class = "li_nav"><a href = "sida3.html">Om oss</a></li>
       </ul>
     </nav>
-  </nav>
+    <div id = "sida3_div">
+        <h2> OM ICE-HOT</h2>
+        <img src = "img/drink.jpg" id = "img3" alt = "Picture of drink">
+        <p>Kom hit och njut av en ångande varm kopp med den godaste drickan du någonsin skådat. Här på Ice-hot säljer vi glass som kokas upp till 100 grader och toppas med grädde och valfri topping. Vi är ett icke vinstdrivande cafe som ligger på Annikas gata.</p>
+      </div>
+  </div>
 </body>
